# ralcu

./: Cargo.toml  LICENSE  Makefile  README.md
src/: backend.rs  environment.rs  eval.rs  frontend.rs  lexer.rs  main.rs  parser.mkr  parser.patch  parser.rs  types.rs
src/backend/: primitive.rs
src/frontend/: lexer.rs  parser.mkr  parser.rs
test/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  let.txt  letrec.txt
