[package]
name = "ralcu"
version = "0.1.0"
authors = ["puripuri2100 <puripuri2100@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
thiserror = "1.0.38"

